# cuda-spmm

./: readme.md
include/: data.h  spmm_base.h  spmm_cpu_opt.h  spmm_cpu_ref.h  spmm_opt.h  util.h  valid.h
script/: extractor.py  extractor_cpu.py  run_all.sh  run_all_CPU.sh
src/: spmm_cpu_opt.cpp  spmm_cpu_ref.cpp  spmm_opt.cu  util.cu  valid.cu
test/: CMakeLists.txt  main.cpp  test_spmm_cpu.cpp
